src/test/ui/traits/issue-85735.stderr
error[E0283]: type annotations needed: cannot satisfy `T: FnMut<(&'a (),)>`
  --> $DIR/issue-85735.rs:7:8
   |
LL |     T: FnMut(&'a ()),
   |        ^^^^^^^^^^^^^
   |
   = note: cannot satisfy `T: FnMut<(&'a (),)>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0283`.
